--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <p class="annual">Annually</p>
                 <label class="switch">
                       <input type="checkbox" id="myCheck" onClick="mouseToggleSwitch()" autofocus checked>
-                      <span class="slider"></span>
+                      <span class="label-info">Checkbox for toggle switch</span>
+			<span class="slider"></span>
                 </label>
                 <p class="month">Monthly</p>
              </div>
